clusters/default/default/vaultwarden/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vaultwarden
  template:
    metadata:
      labels:
        app: vaultwarden
    spec:
      containers:
      - name: vaultwarden
        image: vaultwarden/server:latest
        ports:
        - containerPort: 443
        volumeMounts:
        - name: vaultwarden-cert
          mountPath: /ssl
          readOnly: true
        - mountPath: /data
          name: vaultwarden-data
      volumes:
      - name: vaultwarden-cert
        secret:
          secretName: vaultwarden-cert
      - name: vaultwarden-data
        persistentVolumeClaim:
          claimName: vaultwarden-pvc
