clusters/default/default/vaultwarden/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  namespace: default
spec:
  selector:
    app: vaultwarden
  ports:
  - protocol: TCP
    port: 443
    targetPort: 443
    nodePort: 30443
  type: NodePort
